Fix contact forms, emails, and dates

--- a/public/oldthreat-dashboard (2).html
+++ b/public/oldthreat-dashboard (2).html
@@ -374,7 +374,7 @@
         <a href="index.html">Home</a>
         <a href="dashboard.html">CVE Dashboard</a>
         <a href="pricing.html">Pricing</a>
-        <a href="mailto:business@cvepulse.com">Contact</a>
+        <a href="mailto:contact@cvepulse.com">Contact</a>
       </div>
       <div class="footer-info">
         <p>Data sources: CISA KEV, Abuse.ch, Ransomware.live</p>
